--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vim/bundle/powerline-fonts"]
 	path = vim/bundle/powerline-fonts
 	url = https://github.com/powerline/fonts.git
+[submodule "vim/bundle/vim-syntastic"]
+	path = vim/bundle/vim-syntastic
+	url = https://github.com/vim-syntastic/syntastic.git
